# arbot

./: .dockerignore  .gitignore  .vercelignore  BOT_DOCUMENTATION.md  CHANGELOG.md  COINT_GATE_FIX_SUMMARY.md  DEPLOYMENT_V1_FREE.md  EXECUTION_CODE_REVIEW.md  KILL_SWITCH_STATE_MACHINE.md  README.md  REGIME_ROUTER_PHASE3_SPEC.md  REGIME_ROUTER_PHASE4_SPEC.md  REGIME_ROUTER_V1_SPEC.md  SCHEDULER_README.md  V2_ROADMAP.md  V2_UI_PLATFORM_SPEC.md  list_http_methods.py  okx_api_methods.html  pytest.ini  requirements.txt  shared_cointegration_validator.py  start_bot.py  strategy_scheduler.py  vercel.json
Platform/api/: Dockerfile  RENDER_DEPLOYMENT_GUIDE.md  alembic.ini  app.py  main.py  pyproject.toml  requirements.txt
Platform/api/alembic/: env.py  script.py.mako
Platform/api/alembic/versions/: 0001_initial.py  0002_password_reset_tokens.py  0003_role_permissions.py  0004_user_permissions.py  0005_refresh_token_persistence.py  2a6341d32e9c_run_history.py  5d6b8f9c1a2e_run_pair_segments.py  8f4b2c9d1e7a_equity_snapshots.py
Platform/api/app/: config.py  database.py  deps.py  main.py  models.py  permissions.py  process_runner.py  realtime.py  schemas.py  security.py
Platform/api/app/routers/: admin.py  auth.py  events.py  reports.py  runs.py  users.py  ws.py
Platform/api/app/services/: __init__.py  bot_control.py  cointegrated_pairs.py  email_delivery.py  equity_sanity.py  event_materializer.py  live_report.py  log_rotation.py  run_pair_segments.py  run_runtime.py
Platform/api/tests/: conftest.py  test_cookie_auth.py  test_portfolio_equity_curve.py
(+164 files in other folders)
